# DeepCTR

./: .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  __init__.py  base.py  criteo_sample.csv  deep_cross_network.py  deepfm.py  keras_demo.py  setup.cfg  setup.py  tf_demo.py  utils.py
.github/: rompus.yml
deepctr/: __init__.py  activations.py  automodel.py  feature_column.py  input_embedding.py  inputs.py  layers.py  sequence.py  utils.py
demo/: criteo_sample.txt  gen_demo.py  movielens_sample.txt  run_classification_criteo.py  run_regression_movielens.py  small_data.pkl  tf_regression_movielens.py
docs/: Makefile  README.md  make.bat  requirements.readthedocs.txt
examples/: alimama_sample.txt  avazu_sample.txt  census-income.sample  criteo_sample.te.tfrecords  criteo_sample.tr.tfrecords  criteo_sample.va.tfrecords  gen_tfrecords.py  learn_tf.py  movielens_age_vocabulary.csv  run_all.sh  run_bst.py  run_can.py  run_classification_criteo.py  run_classification_criteo_hash.py  run_classification_criteo_multi_gpu.py  run_classification_criteo_tfrecord.py  run_deepfefm.py  run_dien.py  run_din.py  run_dmin.py  run_dmr.py  run_dsin.py  run_esmm.py  run_estimator_pandas_classification.py  run_estimator_tfrecord_classification.py  run_flen.py  run_fwfm.py  run_mmoe.py  run_mtl.py  run_multivalue_movielens.py  run_multivalue_movielens_hash.py  run_multivalue_movielens_vocab_hash.py  run_regression_movielens.py  run_utpm.py
keras_model/: README.md  __init__.py  afm.py  dcn.py  deepfm.py  mlr.py  nfm.py  utils.py
runtime/: README.md  (+2 more)
(+264 files in other folders)
