[metadata]
desciption-file = README.md

#[coverage:run]
#branch = True

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise ValueError
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if False:
    if __name__ == .__main__.:

[coverage:run]
omit =
    # omit anything in a .local directory anywhere
    #*/.local/*
    # omit everything in /usr
    deepctr/contrib/*
    # omit this single file
    #utils/tirefire.py